<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.c4-soft.springaddons</groupId>
		<artifactId>spring-addons</artifactId>
		<version>4.2.2-SNAPSHOT</version>
		<relativePath>..</relativePath>
	</parent>
	<groupId>com.c4-soft.springaddons.samples</groupId>
	<artifactId>spring-addons-samples</artifactId>
	<packaging>pom</packaging>

	<modules>
		<module>webflux-jwtauthenticationtoken</module>
		<module>webflux-oidcauthentication</module>
		<module>webmvc-jwtauthenticationtoken</module>
		<module>webmvc-jwtauthenticationtoken-jpa-authorities</module>
		<module>webmvc-keycloakauthenticationtoken</module>
		<module>webmvc-oidcauthentication</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<com.c4-soft.springaddons.version>4.2.2-SNAPSHOT</com.c4-soft.springaddons.version>
		<hibernate.version>5.6.9.Final</hibernate.version>
		<hibernate-enhance-maven-plugin.version>5.6.9.Final</hibernate-enhance-maven-plugin.version>
		<lombok.version>1.18.24</lombok.version>
		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
		<org.mapstruct.version>1.5.0.RC1</org.mapstruct.version>
		<spring-native.version>0.12.0</spring-native.version>
		<springdoc-openapi.version>1.6.8</springdoc-openapi.version>
		<springdoc-openapi-maven-plugin.version>1.4</springdoc-openapi-maven-plugin.version>
		<springdoc-openapi.output-dir>${project.parent.basedir}/..</springdoc-openapi.output-dir>
		
		<integration-tests.hostname>${env.HOSTNAME}</integration-tests.hostname>
		<integration-tests.scheme>https</integration-tests.scheme>

		<repackage.classifier />
		<image.builder>paketobuildpacks/builder:tiny</image.builder>
		<ca-certificates.binding>${project.basedir}/bindings/ca-certificates</ca-certificates.binding>
		<image.native>false</image.native>
		<image.arguments />
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.springframework.experimental</groupId>
				<artifactId>spring-native</artifactId>
				<version>${spring-native.version}</version>
			</dependency>


			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.1.12</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-security</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-native</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>

			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-security-oauth2-webmvc-addons</artifactId>
				<version>${com.c4-soft.springaddons.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-security-oauth2-test-addons</artifactId>
				<version>${com.c4-soft.springaddons.version}</version>
			</dependency>
			<dependency>
				<groupId>com.c4-soft.springaddons</groupId>
				<artifactId>spring-security-oauth2-test-webmvc-addons</artifactId>
				<version>${com.c4-soft.springaddons.version}</version>
			</dependency>


			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${org.mapstruct.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-mapstruct-binding</artifactId>
				<version>${lombok-mapstruct-binding.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${org.mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<classifier>${repackage.classifier}</classifier>
						<keepDependenciesWithProvidedScope>true</keepDependenciesWithProvidedScope>
						<createDependencyReducedPom>true</createDependencyReducedPom>
						<image>
							<builder>${image.builder}</builder>
							<env>
								<BP_NATIVE_IMAGE>${image.native}</BP_NATIVE_IMAGE>
								<BP_NATIVE_IMAGE_BUILD_ARGUMENTS>${image.arguments}</BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
							</env>
							<bindings>
								<binding>${ca-certificates.binding}:/platform/bindings/ca-certificates:ro</binding>
							</bindings>
						</image>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.experimental</groupId>
					<artifactId>spring-aot-maven-plugin</artifactId>
					<version>${spring-native.version}</version>
					<configuration>
						<removeXmlSupport>true</removeXmlSupport>
						<removeSpelSupport>false</removeSpelSupport>
						<removeYamlSupport>true</removeYamlSupport>
						<removeJmxSupport>true</removeJmxSupport>
					</configuration>
					<executions>
						<execution>
							<id>generate</id>
							<goals>
								<goal>generate</goal>
							</goals>
						</execution>
						<execution>
							<id>test-generate</id>
							<goals>
								<goal>test-generate</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.graalvm.buildtools</groupId>
					<artifactId>native-maven-plugin</artifactId>
					<version>${native.buildtools.version}</version>
					<extensions>true</extensions>
					<executions>
						<execution>
							<id>build-native</id>
							<goals>
								<goal>build</goal>
							</goals>
							<phase>package</phase>
						</execution>
						<execution>
							<id>test-native</id>
							<goals>
								<goal>test</goal>
							</goals>
							<phase>test</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
